tests/lean/quote_error_pos.lean.expected.out
quote_error_pos.lean:14:2: error: failed to synthesize type class instance for
a : ℕ
⊢ add_monoid bool
state:
a : ℕ
⊢ 0 + a = a
quote_error_pos.lean:22:2: error: failed to synthesize type class instance for
a : ℕ
⊢ add_monoid bool
state:
a : ℕ
⊢ 0 + a = a
